--- a/html/index.html
+++ b/html/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="it">
+  <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>F1</title>
+    <link rel="stylesheet" href="../style/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <title>Season List</title>
-</head>
-<body>
+	</head>
 
-    <!-- Menu -->
+  <body>
+
+		<!-- Menu -->
 		<aside class="float-start">
 			<div class="flex-shrink-0 p-3 bg-dark" style=" height: 100%;">
 				<a href="#" class="d-flex align-items-center pb-3 mb-3 link-light text-decoration-none border-bottom">
@@ -88,6 +89,44 @@
 				</ul>
 			</div>
 		</aside>
-    
-</body>
+
+		<main class="float-end d-flex flex-column justify-content-center">
+
+			<!-- Div with database info (Number of driver, team, season, races...) -->
+			<div class="infoDivHome">
+				<div class="container d-flex justify-content-center text-center">
+					<img src="../svg/f1.svg" alt="F1 logo">
+					<h1>Database informations</h1>
+					<div class="statContainer row column-gap-3 mx-2 mt-4">
+
+						<div class="border border-2  border-dark-subtle rounded col">
+							<h2 class="pt-2">Driver</h2>
+							<img class="py-3" src="../svg/helmet.svg" alt="Driver helmet icon">
+							<p class="fs-3">20</p>
+						</div>
+
+						<div class="border border-2  border-dark-subtle rounded col">
+							<h2 class="pt-2">Team</h2>
+							<img class="py-3" src="../svg/formula-1.svg" alt="F1 car icon">
+							<p class="fs-3">10</p>
+						</div>
+
+						<div class="border border-2  border-dark-subtle rounded col">
+							<h2 class="pt-2">Races</h2>
+							<img class="py-3" src="../svg/two-motor-flags.svg" alt="Checkered flags icon">
+							<p class="fs-3">24</p>
+						</div>
+
+						<div class="border border-2  border-dark-subtle rounded col">
+							<h2 class="pt-2">Season</h2>
+							<img class="py-3" src="../svg/trophy.svg" alt="Trophy icon">
+							<p class="fs-3">1</p>
+						</div>
+					</div>
+				</div>
+			</div>
+
+		</main>
+
+  </body>
 </html>
