--- a/html/index.html
+++ b/html/index.html
@@ -15,13 +15,13 @@
 		<!-- Menu -->
 		<aside class="float-start">
 			<div class="flex-shrink-0 p-3 bg-dark" style=" height: 100%;">
-				<a href="#" class="d-flex align-items-center pb-3 mb-3 link-light text-decoration-none border-bottom">
+				<a href="index.html" class="d-flex align-items-center pb-3 mb-3 link-light text-decoration-none border-bottom">
 					<span class="fs-5 fw-semibold">F1Data</span>
 				</a>
 				<ul class="list-unstyled ps-0">
 
 					<li class="listEl mb-1">
-						<a class="btn btn-dark d-inline-flex align-items-center rounded border-0" aria-expanded="true">
+						<a href="index.html" class="btn btn-dark d-inline-flex align-items-center rounded border-0" aria-expanded="true">
 							Home
 						</a>
 					</li>
@@ -31,8 +31,8 @@
 						</button>
 						<div class="collapse px-3" id="driver-collapse">
 							<ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-								<li><a href="#" class="link-light d-inline-flex text-decoration-none rounded">Add</a></li>
-								<li><a href="#" class="link-light d-inline-flex text-decoration-none rounded">List</a></li>
+								<li><a href="addDriver.html" class="link-light d-inline-flex text-decoration-none rounded">Add</a></li>
+								<li><a href="listDriver.html" class="link-light d-inline-flex text-decoration-none rounded">List</a></li>
 							</ul>
 						</div>
 					</li>
@@ -90,7 +90,7 @@
 			</div>
 		</aside>
 
-		<main class="float-end d-flex flex-column justify-content-center">
+		<main class="float-end d-flex flex-column justify-content-center align-items-center">
 
 			<!-- Div with database info (Number of driver, team, season, races...) -->
 			<div class="infoDivHome">
