Fixed bugs with directory and implemented Driver page

--- a/html/driver/addDriver.html
+++ b/html/driver/addDriver.html
@@ -21,7 +21,7 @@
             <ul class="list-unstyled ps-0">
 
                 <li class="listEl mb-1">
-                    <a href="index.html" class="btn btn-dark d-inline-flex align-items-center rounded border-0" aria-expanded="true">
+                    <a href="../index.html" class="btn btn-dark d-inline-flex align-items-center rounded border-0" aria-expanded="true">
                         Home
                     </a>
                 </li>
