--- a/html/driver/driver.html
+++ b/html/driver/driver.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <title>List Driver</title>
+    <title>Driver</title>
 </head>
 <body>
 
    	<!-- Menu -->
-	<aside class="float-start">
+    <aside class="float-start">
 		<div class="flex-shrink-0 p-3 bg-dark" style=" height: 100%;">
 			<a href="index.html" class="d-flex align-items-center pb-3 mb-3 link-light text-decoration-none border-bottom">
 				<span class="fs-5 fw-semibold">F1Data</span>
@@ -82,42 +82,43 @@
 			</ul>
 		</div>
 	</aside>
-   
-    <main class="float-end d-flex flex-column justify-content-center align-items-center">
-        <div class="col-3 text-center">
-            <label for="filterSelect">Select nationality to filter drivers: </label>
-            <select class="form-select my-2" name="filterSelect" id="filterSelect">
-                <option selected></option>
-                <option value="netherland">Netherland</option>
-                <option value="monaco">Monaco</option>
-            </select>
-        </div>
-        <div class="driverTableDiv col-7 mt-4">
-            <table class="table text-center table-striped">
-                <thead class="sticky-top">
-                    <tr>
-                        <th scope="col">Name</th>
-                        <th scope="col">Date of birth</th>
-                        <th scope="col">Nationality</th>
-                        <th scope="col">Number</th>
-                    </tr>
-                </thead>
 
+    <main class="float-end align-items-center">
+
+        <div class="col-12 p-4" style="margin-top:20px">
+            <h3 class="p-2">Charles Leclerc</h3>
+            <ul class="list-group list-group-horizontal col-10 mx-3">
+                <li class="list-group-item"><h6>Nationality:</h6><p>Monaco</p></li>
+                <li class="list-group-item"><h6>Date of birth:</h6><p>16/10/1997</p></li>
+                <li class="list-group-item"><h6>Number:</h6> <p>16</p></li>
+                <li class="list-group-item"><h6>Actual race Engineer:</h6><p>Xavier Marcos Padros</p></li>
+            </ul>
+        </div>
+
+        <div class="col-10 p-4">
+            <h4>Contracts</h4>
+            <table class="table">
+                <thead>
+                  <tr>
+                    <th scope="col">Sign year</th>
+                    <th scope="col">Expiration year</th>
+                    <th scope="col">Team</th>
+                  </tr>
+                </thead>
                 <tbody>
-                    <tr>
-                        <td><a href="#">Charles Leclerc</a></td>
-                        <td>16/10/1997</td>
-                        <td>Monaco</td>
-                        <td>16</td>
-                    </tr>
-                    <tr>
-                        <td><a href="#">Max Verstappen</a></td>
-                        <td>30/09/1997</td>
-                        <td>Netherland</td>
-                        <td>1</td>
-                    </tr>
+                  <tr>
+                    <td>2018</td>
+                    <td>2019</td>
+                    <td><a href="#">Sauber</a></td>
+                  </tr>
+                  <tr>
+                    <td>2019</td>
+                    <td>2026</td>
+                    <td><a href="#">Ferrari</a></td>
+                  </tr>
                 </tbody>
-            </table>
+              </table>
+
         </div>
     </main>
     
