--- a/html/index.html
+++ b/html/index.html
@@ -31,8 +31,8 @@
 						</button>
 						<div class="collapse px-3" id="driver-collapse">
 							<ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-								<li><a href="addDriver.html" class="link-light d-inline-flex text-decoration-none rounded">Add</a></li>
-								<li><a href="listDriver.html" class="link-light d-inline-flex text-decoration-none rounded">List</a></li>
+								<li><a href="driver/addDriver.html" class="link-light d-inline-flex text-decoration-none rounded">Add</a></li>
+								<li><a href="driver/listDriver.html" class="link-light d-inline-flex text-decoration-none rounded">List</a></li>
 							</ul>
 						</div>
 					</li>
