--- a/html/driver/listDriver.html
+++ b/html/driver/listDriver.html
@@ -83,8 +83,9 @@
 		</div>
 	</aside>
    
-    <main class="float-end d-flex flex-column justify-content-center align-items-center">
-        <div class="col-3 text-center">
+    <main class="float-end d-flex align-items-center flex-column">
+        <div class="col-3 text-center mt-4">
+			<h2>List of all drivers:</h2>
             <label for="filterSelect">Select nationality to filter drivers: </label>
             <select class="form-select my-2" name="filterSelect" id="filterSelect">
                 <option selected></option>
