--- a/html/driver/addDriver.html
+++ b/html/driver/addDriver.html
@@ -14,80 +14,73 @@
 
     <!-- Menu -->
     <aside class="float-start">
-        <div class="flex-shrink-0 p-3 bg-dark" style=" height: 100%;">
-            <a href="index.html" class="d-flex align-items-center pb-3 mb-3 link-light text-decoration-none border-bottom">
-                <span class="fs-5 fw-semibold">F1Data</span>
-            </a>
-            <ul class="list-unstyled ps-0">
-
-                <li class="listEl mb-1">
-                    <a href="../index.html" class="btn btn-dark d-inline-flex align-items-center rounded border-0" aria-expanded="true">
-                        Home
-                    </a>
-                </li>
-                <li class="listEl mb-1">
-                    <button class="btn btn-dark btn-toggle d-inline-flex align-items-center rounded border-0 collapsed" data-bs-toggle="collapse" data-bs-target="#driver-collapse" aria-expanded="false">
-                        Driver
-                    </button>
-                    <div class="collapse px-3" id="driver-collapse">
-                        <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                            <li><a href="addDriver.html" class="link-light d-inline-flex text-decoration-none rounded">Add</a></li>
-                            <li><a href="listDriver.html" class="link-light d-inline-flex text-decoration-none rounded">List</a></li>
-                        </ul>
-                    </div>
-                </li>
-
-                <li class="listEl mb-1">
-                    <button class="btn btn-dark btn-toggle d-inline-flex align-items-center rounded border-0 collapsed" data-bs-toggle="collapse" data-bs-target="#team-collapse" aria-expanded="false">
-                        Team
-                    </button>
-                    <div class="collapse px-3" id="team-collapse">
-                        <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                            <li><a href="#" class="link-light d-inline-flex text-decoration-none rounded">Add</a></li>
-                            <li><a href="#" class="link-light d-inline-flex text-decoration-none rounded">List</a></li>
-                        </ul>
-                    </div>
-                </li>
-
-                <li class="listEl mb-1">
-                    <button class="btn btn-dark btn-toggle d-inline-flex align-items-center rounded border-0 collapsed" data-bs-toggle="collapse" data-bs-target="#contract-collapse" aria-expanded="false">
-                        Contract
-                    </button>
-                    <div class="collapse px-3" id="contract-collapse">
-                        <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                            <li><a href="#" class="link-light d-inline-flex text-decoration-none rounded">Add</a></li>
-                            <li><a href="#" class="link-light d-inline-flex text-decoration-none rounded">Update</a></li>
-                            <li><a href="#" class="link-light d-inline-flex text-decoration-none rounded">List</a></li>
-                        </ul>
-                    </div>
-                </li>
-
-                <li class="listEl mb-1">
-                    <button class="btn btn-dark btn-toggle d-inline-flex align-items-center rounded border-0 collapsed" data-bs-toggle="collapse" data-bs-target="#race-collapse" aria-expanded="false">
-                        Races
-                    </button>
-                    <div class="collapse px-3" id="race-collapse">
-                        <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                            <li><a href="#" class="link-light d-inline-flex text-decoration-none rounded">Add</a></li>
-                            <li><a href="#" class="link-light d-inline-flex text-decoration-none rounded">List</a></li>
-                        </ul>
-                    </div>
-                </li>
-
-                <li class="listEl mb-1">
-                    <button class="btn btn-dark btn-toggle d-inline-flex align-items-center rounded border-0 collapsed" data-bs-toggle="collapse" data-bs-target="#season-collapse" aria-expanded="false">
-                        Season
-                    </button>
-                    <div class="collapse px-3" id="season-collapse">
-                        <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                            <li><a href="#" class="link-light d-inline-flex text-decoration-none rounded">Add</a></li>
-                            <li><a href="#" class="link-light d-inline-flex text-decoration-none rounded">List</a></li>
-                        </ul>
-                    </div>
-                </li>
-
-            </ul>
-        </div>
+    	<div class="flex-shrink-0 p-3 bg-dark" style=" height: 100%;">
+    		<a href="../index.html" class="d-flex align-items-center pb-3 mb-3 link-light text-decoration-none border-bottom">
+    			<span class="fs-5 fw-semibold">F1Data</span>
+    		</a>
+    		<ul class="list-unstyled ps-0">
+    			<li class="listEl mb-1">
+    				<a href="../index.html" class="btn btn-dark d-inline-flex align-items-center rounded border-0" aria-expanded="true">
+    					Home
+    				</a>
+    			</li>
+    			<li class="listEl mb-1">
+    				<button class="btn btn-dark btn-toggle d-inline-flex align-items-center rounded border-0 collapsed" data-bs-toggle="collapse" data-bs-target="#driver-collapse" aria-expanded="false">
+    					Driver
+    				</button>
+    				<div class="collapse px-3" id="driver-collapse">
+    					<ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+    						<li><a href="../driver/addDriver.html" class="link-light d-inline-flex text-decoration-none rounded">Add</a></li>
+    						<li><a href="../driver/listDriver.html" class="link-light d-inline-flex text-decoration-none rounded">List</a></li>
+    					</ul>
+    				</div>
+    			</li>
+    			<li class="listEl mb-1">
+    				<button class="btn btn-dark btn-toggle d-inline-flex align-items-center rounded border-0 collapsed" data-bs-toggle="collapse" data-bs-target="#team-collapse" aria-expanded="false">
+    					Team
+    				</button>
+    				<div class="collapse px-3" id="team-collapse">
+    					<ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+    						<li><a href="../team/addTeam.html" class="link-light d-inline-flex text-decoration-none rounded">Add</a></li>
+    						<li><a href="../team/listTeam.html" class="link-light d-inline-flex text-decoration-none rounded">List</a></li>
+    					</ul>
+    				</div>
+    			</li>
+    			<li class="listEl mb-1">
+    				<button class="btn btn-dark btn-toggle d-inline-flex align-items-center rounded border-0 collapsed" data-bs-toggle="collapse" data-bs-target="#contract-collapse" aria-expanded="false">
+    					Contract
+    				</button>
+    				<div class="collapse px-3" id="contract-collapse">
+    					<ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+    						<li><a href="../contract/addContract.html" class="link-light d-inline-flex text-decoration-none rounded">Add</a></li>
+    						<li><a href="../contract/listContract.html" class="link-light d-inline-flex text-decoration-none rounded">List</a></li>
+    					</ul>
+    				</div>
+    			</li>
+    			<li class="listEl mb-1">
+    				<button class="btn btn-dark btn-toggle d-inline-flex align-items-center rounded border-0 collapsed" data-bs-toggle="collapse" data-bs-target="#race-collapse" aria-expanded="false">
+    					Races
+    				</button>
+    				<div class="collapse px-3" id="race-collapse">
+    					<ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+    						<li><a href="../race/addRace.html" class="link-light d-inline-flex text-decoration-none rounded">Add</a></li>
+    						<li><a href="../race/listRace.html" class="link-light d-inline-flex text-decoration-none rounded">List</a></li>
+    					</ul>
+    				</div>
+    			</li>
+    			<li class="listEl mb-1">
+    				<button class="btn btn-dark btn-toggle d-inline-flex align-items-center rounded border-0 collapsed" data-bs-toggle="collapse" data-bs-target="#season-collapse" aria-expanded="false">
+    					Season
+    				</button>
+    				<div class="collapse px-3" id="season-collapse">
+    					<ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+    						<li><a href="../season/addSeason.html" class="link-light d-inline-flex text-decoration-none rounded">Add</a></li>
+    						<li><a href="../season/listSeason.html" class="link-light d-inline-flex text-decoration-none rounded">List</a></li>
+    					</ul>
+    				</div>
+    			</li>
+    		</ul>
+    	</div>
     </aside>
 
     <main class="float-end d-flex align-items-center flex-column">
@@ -101,12 +94,12 @@
     
                 <div class="py-2">
                     <label for="surnameInput">Surname: </label>
-                    <input class="form-control border border-dark" type="text" name="nameInput" id="surnameInput" required>
+                    <input class="form-control border border-dark" type="text" name="surnameInput" id="surnameInput" required>
                 </div>
     
                 <div class="py-2">
                     <label for="nationalityInput">Nationality: </label>
-                    <input class="form-control border border-dark" list="nationalityList" type="text" name="nameInput" id="nationalityInput" required>
+                    <input class="form-control border border-dark" list="nationalityList" type="text" name="nationalityInput" id="nationalityInput" required>
                     <datalist id="nationalityList">
                         <option value="Netherland">Netherland</option>
                         <option value="Monaco">Monaco</option>
