--- a/html/team/listTeam.html
+++ b/html/team/listTeam.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <title>List Driver</title>
+    <title>List Team</title>
 </head>
 <body>
 
@@ -84,37 +84,34 @@
    
     <main class="float-end d-flex align-items-center flex-column">
         <div class="col-3 text-center mt-4">
-			<h2>List of all drivers:</h2>
-            <label for="filterSelect">Select nationality to filter drivers: </label>
+			<h2>List of all team:</h2>
+            <label for="filterSelect">Select nationality to filter team: </label>
             <select class="form-select my-2" name="filterSelect" id="filterSelect">
                 <option selected></option>
                 <option value="netherland">Netherland</option>
                 <option value="monaco">Monaco</option>
             </select>
         </div>
-        <div class="tableDiv col-7 mt-4">
+        <div class="driverTableDiv col-7 mt-4">
             <table class="table text-center table-striped">
                 <thead class="sticky-top">
                     <tr>
                         <th scope="col">Name</th>
-                        <th scope="col">Date of birth</th>
                         <th scope="col">Nationality</th>
-                        <th scope="col">Number</th>
+                        <th scope="col">Headquarter</th>
                     </tr>
                 </thead>
 
                 <tbody>
                     <tr>
-                        <td><a href="#">Charles Leclerc</a></td>
-                        <td>16/10/1997</td>
-                        <td>Monaco</td>
-                        <td>16</td>
+                        <td><a href="#">Ferrari</a></td>
+                        <td>Italy</td>
+                        <td>Maranello, IT</td>
                     </tr>
                     <tr>
-                        <td><a href="#">Max Verstappen</a></td>
-                        <td>30/09/1997</td>
-                        <td>Netherland</td>
-                        <td>1</td>
+                        <td><a href="#">Mercedes</a></td>
+                        <td>Germany</td>
+                        <td>Brackley, UK</td>
                     </tr>
                 </tbody>
             </table>
