--- a/html/season/listSeason.html
+++ b/html/season/listSeason.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <title>Team page</title>
+    <title>Season List</title>
 </head>
 <body>
 
@@ -81,64 +81,31 @@
     		</ul>
     	</div>
     </aside>
-   
-    <main class="float-end d-flex align-items-center flex-column">
 
-        <div class="p-4 text-center" style="margin-top:20px">
-            <h3 class="p-2 mx-auto">Ferrari</h3>
-            <ul class="list-group list-group-horizontal col-10 mx-3 mb-3">
-                <li class="list-group-item"><h6>Nationality:</h6><p>Italy</p></li>
-                <li class="list-group-item"><h6>Headquarter</h6><p>Maranello, IT</p></li>
-                <li class="list-group-item">
-                    <h6>Car</h6>
-                    <ul class="list-group list-group-horizontal">
-                        <li class="list-group-item">Name: <p>SF-24</p></li>
-                        <li class="list-group-item">Power Unit: <p>Ferrari</p></li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
+	<main class="float-end d-flex align-items-center flex-column">
+		<h2 class="my-3">List of all season:</h2>
+        <div class="tableDiv col-7 mt-4">
+            <table class="table text-center table-striped">
+                <thead class="sticky-top">
+                    <tr>
+                        <th scope="col">Year</th>
+                        <th scope="col">Number of races</th>
+                    </tr>
+                </thead>
 
-        <div class="d-flex border-top" style="height: 50%;">
-            <div class="tableDiv my-4 mx-4">
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th scope="col">Driver name</th>
-                            <th scope="col">Contract sign year</th>
-                            <th scope="col">Contract expiration year</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td><a href="#">Charles Leclerc</a></td>
-                            <td>2019</td>
-                            <td>2027</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-    
-            <div class="tableDiv my-4 mx-4">
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th scope="col">Employee name</th>
-                            <th scope="col">Role</th>
-                            <th scope="col">Nationality</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Frederic Vasseur</td>
-                            <td>Team Principal</td>
-                            <td>France</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
+                <tbody>
+                    <tr>
+                        <td><a href="#">2024</a></td>
+                        <td>23</td>
+                    </tr>
+                    <tr>
+                        <td><a href="#">2023</a></td>
+                        <td>22</td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
-    </main>
+	</main>
     
 </body>
 </html>
