--- a/html/season/season.html
+++ b/html/season/season.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../style/style.css">
+    <link rel="stylesheet" href="../../style/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <title>Season List</title>
+    <title>Season page</title>
 </head>
 <body>
 
@@ -81,6 +81,79 @@
     		</ul>
     	</div>
     </aside>
+
+    <main class="float-end d-flex align-items-center flex-column">
+
+        <div class="p-4 text-center" style="margin-top:20px">
+            <h3 class="p-2 mx-auto">2024</h3>
+            <ul class="list-group list-group-horizontal col-10 mx-3">
+                <li class="list-group-item"><h6>Number of races: </h6><p class="fs-4">23</p></li>
+            </ul>
+        </div>
+
+        <div class="d-flex border-top" style="height: 50%;">
+            <div class="tableDiv my-4 mx-4 text-center">
+                <h4>Races</h4>
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th scope="col">Round</th>
+                            <th scope="col">Track</th>
+                            <th scope="col">Race type</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>1</td>
+                            <td>Losail International Circuit</td>
+                            <td>Normal</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+
+            <div class="tableDiv my-4 mx-4 text-center">
+                <h4>Team Standing</h4>
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th scope="col">Position</th>
+                            <th scope="col">Team</th>
+                            <th scope="col">Points</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>1</td>
+                            <td>Red Bull</td>
+                            <td>392</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            
+            <div class="tableDiv my-4 mx-4 text-center">
+                <h4>Driver Standing</h4>
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th class="col">Position</th>
+                            <th scope="col">Driver</th>
+                            <th scope="col">Points</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>1</td>
+                            <td>Max Verstappen</td>
+                            <td>231</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+    </main>
     
 </body>
 </html>
