--- a/html/team/team.html
+++ b/html/team/team.html
@@ -88,14 +88,7 @@
             <h3 class="p-2 mx-auto">Ferrari</h3>
             <ul class="list-group list-group-horizontal col-10 mx-3 mb-3">
                 <li class="list-group-item"><h6>Nationality:</h6><p>Italy</p></li>
-                <li class="list-group-item"><h6>Headquarter</h6><p>Maranello, IT</p></li>
-                <li class="list-group-item">
-                    <h6>Car</h6>
-                    <ul class="list-group list-group-horizontal">
-                        <li class="list-group-item">Name: <p>SF-24</p></li>
-                        <li class="list-group-item">Power Unit: <p>Ferrari</p></li>
-                    </ul>
-                </li>
+                <li class="list-group-item"><h6>Headquarter:</h6><p>Maranello, IT</p></li>
             </ul>
         </div>
 
