Implemented possibility of delete and edit a driver contract. Now after add a contract come back to the driver page

--- a/html/race/addRace.html
+++ b/html/race/addRace.html
@@ -113,7 +113,8 @@
                     <input class="form-control border border-dark" type="number" name="lapsInput" id="lapsInput">
                 </div>
 
-                <input class="btn btn-dark form-control mt-3" type="submit" value="Add race">
+				<a class="btn btn-dark mt-3 w-50" href="addQuali.html"><i class="fa-solid fa-arrow-right"></i></a>
+
             </form>
         </div>
     </main>
